# adventures-in-kernel-land

./: .gitignore  README.md  output.txt
.cargo/: config.toml
exploiter-example/: Cargo.toml  lib.rs
notes/: c0.md  c1.md  por-que-del-set-up.md  set-up.md
os/: Cargo.toml  Makefile
os/src/: lib.rs
os/src/asm/: boot.s  trap.s
probando-detector/src/: lib.rs
src/: main.rs
